# source-identifier-banking

./: Build Share Package.cmd  Launch Banking Compliance Source Finder.cmd  Launch Banking Compliance Source Finder.vbs  PRODUCT-HANDOFF.md  README.md  TECH-HANDOFF.md  app.py  build_standalone_release.ps1  create_app_shortcuts.ps1  desktop_app.py  disable_app_autostart.ps1  discovery_config.json  enable_app_autostart.ps1  pyproject.toml  requirements.txt  run_background_now.ps1  run_check_once.cmd  scheduled_checks.py  setup_windows_task.ps1
.github/workflows/: discover.yml
.streamlit/: config.toml
chrome-extension/: README.md  manifest.json  popup-preview.css  popup-preview.html  popup.css  popup.html  popup.js
config/: existing_sources.yaml  search_config.yaml
data/: seen_sources.csv
data/output/: compiled_new_sources.csv  latest_all_net_new_sources.csv  latest_article_matches.csv  latest_daily_digest.txt  latest_new_sources_worth_monitoring.csv  latest_source_overview.csv  latest_update.txt  new_sources_worth_monitoring_20260402_121716.csv  new_sources_worth_monitoring_20260402_122909.csv  new_sources_worth_monitoring_20260402_135928.csv
source_identifier_banking/: __init__.py  __main__.py  cli.py  crawler.py  decisions.py  discovery.py  excel_importer.py  feeds.py  scoring.py  search.py  server.py  url_utils.py
tests/: test_decisions.py  test_excel_importer.py  test_feeds.py  test_scoring.py  test_server.py  test_url_utils.py
